# invaders-glm5

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/invaders/: __init__.py  alien.py  bullet.py  explosion.py  game.py  main.py  player.py  settings.py  star.py
